fix: footer and tooltip background color in dark mode

--- a/src/app/css/tooltip.css
+++ b/src/app/css/tooltip.css
@@ -1,6 +1,6 @@
 .tooltip {
     position: absolute;
-    background-color: beige;
+    background-color: var(--background);
     z-index: 3;
     height: auto;
     max-width: 200px;
